# connors-datafetch

./: .flake8  .gitignore  CCXT_DATASOURCE_IMPLEMENTATION_PLAN.md  CCXT_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: README.md
.github/workflows/: build-env.yml  ci.yml  release.yml
connors_datafetch/: __init__.py
connors_datafetch/config/: manager.py
connors_datafetch/core/: registry.py  timespan.py
connors_datafetch/datasources/: __init__.py  ccxt.py  finnhub.py  fmp.py  polygon.py  yfinance.py
connors_datafetch/services/: datafetch_service.py
connors_downloader/: __init__.py
connors_downloader/cli/: downloader.py
connors_downloader/config/: manager.py
connors_downloader/core/: datasource.py  registry.py
connors_downloader/datasources/: __init__.py  ccxt.py  finnhub.py  fmp.py  polygon.py  yfinance.py
connors_downloader/services/: download_service.py
tests/: test_ccxt_datasource.py  test_datafetch_service.py  test_datasources.py  test_download_service.py  test_timespan.py
